# ros_asinus

./: README.md
asinus_code/asinus/: ManualSpeed_Improved.ino
asinus_code/asinus/src/: main.cpp
asinus_description/: CMakeLists.txt  model.config  model.sdf  package.xml
asinus_description/config/: ekf.yaml
asinus_description/config/asinus/: base.yaml  caster_wheel.yaml  motor_hub.yaml  motor_hub2.yaml  wheel_support.yaml  wheel_support2.yaml  wheel_support_end.yaml  wheel_support_end2.yaml
asinus_description/launch/: asinus_description.launch.py
asinus_description/meshes/asinus/: frame.stl
asinus_description/rviz/: diffbot_view.rviz
asinus_description/urdf/: asinus.urdf.xacro
asinus_description/urdf/include/: asinus_caster_macro.urdf.xacro  common_macros.urdf.xacro  ros2_control_macro.urdf.xacro
asinus_description/urdf/include/sensors/: gps.urdf.xacro  imu.urdf.xacro  kinect.urdf.xacro  lidar.urdf.xacro
asinus_diff_control/: CMakeLists.txt  asinus_control.xml  package.xml
asinus_diff_control/config/: asinus_controllers.yaml
asinus_diff_control/include/asinus_diff/: diff_asinus_system.hpp
asinus_diff_control/launch/: controler.launch.py
asinus_diff_control/src/: diff_asinus_system.cpp
asinus_gz/: CMakeLists.txt  TROUBLESHOOTING.md  package.xml
asinus_gz/launch/: asinus_one_robot.launch.py  spawn_robot.launch.py
asinus_gz/params/: asinus_params.yaml
asinus_gz/rviz/: asinus_gz.rviz
asinus_gz/urdf/: asinus_gz.xacro
asinus_gz/urdf/include/: asinus_materials.xacro
asinus_gz/worlds/: campo.sdf  empty.sdf  empty.world  farm.sdf  model.config  model.sdf
asinus_nav/: CMakeLists.txt  README.md  package.xml
asinus_nav/config/: nav2_params.yaml
asinus_nav/launch/: asinus_nav.launch.py  asinus_slam.launch.py
asinus_nav/rviz/: asinus_nav.rviz  asinus_slam.rviz
asinus_slam/: CMakeLists.txt  README_optimization.md  package.xml
asinus_slam/config/: rtabmap_optimized.yaml
asinus_slam/launch/: asinus_slam_sim.launch.py  slam.launch.py
ros2_control_asinus/: CMakeLists.txt  asinus_control.xml  package.xml
ros2_control_asinus/config/: diffbot_controllers.yaml  ekf.yaml
ros2_control_asinus/launch/: diffbot.launch.py
ros2_control_asinus/src/: diffbot_system.cpp  test_plugin.cpp
ros2_control_asinus/src/include/asinus/: diffbot_system.hpp
ros2_control_asinus/test/: test_diffbot_launch.py  test_urdf_xacro.py
