<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>asinus_slam</name>
  <version>1.0.0</version>
  <description>SLAM package for Asinus robot using RTABMap, EKF, LIDAR and GPS</description>
  
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- SLAM and Navigation -->
  <depend>rtabmap_ros</depend>
  
  <!-- LIDAR processing -->
  <depend>laser_geometry</depend>
  <depend>pointcloud_to_laserscan</depend>
  
  <!-- GPS -->
  <depend>robot_localization</depend>
  <depend>geographic_msgs</depend>
  
  <!-- Visualization -->
  <depend>rviz2</depend>
  <depend>rviz_common</depend>
  
  <!-- Launch system -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  
  <!-- Other robot packages -->
  <depend>asinus_description</depend>
  <depend>asinus_gz</depend>
  <depend>ros2_control_asinus</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
